--- a/Writing/Interim_Report/My_Library.bib
+++ b/Writing/Interim_Report/My_Library.bib
@@ -937,7 +937,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Bouguern, Mohamed Djihad and M r, Anil Kumar and Zaghib, Karim},
 	month = dec,
 	year = {2024},
-	keywords = {Additives, CEI evolution, Electrode materials, Electrolytes, Lithium-ion batteries, SEI evolution},
+	keywords = {Lithium-ion batteries, Additives, CEI evolution, Electrode materials, Electrolytes, SEI evolution},
 	pages = {235457},
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/7SSQ9PPM/Bouguern et al. - 2024 - The critical role of interfaces in advanced Li-ion battery technology A comprehensive review.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/P3GVLYMM/S0378775324014095.html:text/html},
 }
@@ -957,4 +957,303 @@ This first paper focusses on the systematic modelling and experimental verificat
 	keywords = {Capacity fade, Electrolyte decomposition, Graphite electrode, Lithium-ion cell},
 	pages = {213--220},
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/Y22QI8HW/Agubra et al. - 2014 - Analysis of effects of the state of charge on the formation and growth of the deposit layer on graph.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/UREBMHPA/S037877531401180X.html:text/html},
+}
+
+@article{wang_physics-informed_2024,
+	title = {Physics-informed neural network for lithium-ion battery degradation stable modeling and prognosis},
+	volume = {15},
+	copyright = {2024 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-024-48779-z},
+	doi = {10.1038/s41467-024-48779-z},
+	abstract = {Accurate state-of-health (SOH) estimation is critical for reliable and safe operation of lithium-ion batteries. However, reliable and stable battery SOH estimation remains challenging due to diverse battery types and operating conditions. In this paper, we propose a physics-informed neural network (PINN) for accurate and stable estimation of battery SOH. Specifically, we model the attributes that affect the battery degradation from the perspective of empirical degradation and state space equations, and utilize neural networks to capture battery degradation dynamics. A general feature extraction method is designed to extract statistical features from a short period of data before the battery is fully charged, enabling our method applicable to different battery types and charge/discharge protocols. Additionally, we generate a comprehensive dataset consisting of 55 lithium-nickel-cobalt-manganese-oxide (NCM) batteries. Combined with three other datasets from different manufacturers, we use a total of 387 batteries with 310,705 samples to validate our method. The mean absolute percentage error (MAPE) is 0.87\%. Our proposed PINN has demonstrated remarkable performance in regular experiments, small sample experiments, and transfer experiments when compared to alternative neural networks. This study highlights the promise of physics-informed machine learning for battery degradation modeling and SOH estimation.},
+	language = {en},
+	number = {1},
+	urldate = {2025-11-24},
+	journal = {Nature Communications},
+	author = {Wang, Fujin and Zhai, Zhi and Zhao, Zhibin and Di, Yi and Chen, Xuefeng},
+	month = may,
+	year = {2024},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Batteries},
+	pages = {4332},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/YA7LRFR5/Wang et al. - 2024 - Physics-informed neural network for lithium-ion battery degradation stable modeling and prognosis.pdf:application/pdf},
+}
+
+@article{aykol_perspectivecombining_2021,
+	title = {Perspective—{Combining} {Physics} and {Machine} {Learning} to {Predict} {Battery} {Lifetime}},
+	volume = {168},
+	issn = {1945-7111},
+	url = {https://doi.org/10.1149/1945-7111/abec55},
+	doi = {10.1149/1945-7111/abec55},
+	abstract = {Forecasting the health of a battery is a modeling effort that is critical to driving improvements in and adoption of electric vehicles. Purely physics-based models and purely data-driven models have advantages and limitations of their own. Considering the nature of battery data and end-user applications, we outline several architectures for integrating physics-based and machine learning models that can improve our ability to forecast battery lifetime. We discuss the ease of implementation, advantages, limitations, and viability of each architecture, given the state of the art in the battery and machine learning fields.},
+	language = {en},
+	number = {3},
+	urldate = {2025-11-24},
+	journal = {Journal of The Electrochemical Society},
+	author = {Aykol, Muratahan and Gopal, Chirranjeevi Balaji and Anapolsky, Abraham and Herring, Patrick K. and van Vlijmen, Bruis and Berliner, Marc D. and Bazant, Martin Z. and Braatz, Richard D. and Chueh, William C. and Storey, Brian D.},
+	month = mar,
+	year = {2021},
+	note = {Publisher: IOP Publishing},
+	pages = {030525},
+	file = {IOP Full Text PDF:/Users/georgekirby/Zotero/storage/LE8K87KK/Aykol et al. - 2021 - Perspective—Combining Physics and Machine Learning to Predict Battery Lifetime.pdf:application/pdf},
+}
+
+@article{kamyab_mixed_2019,
+	title = {Mixed {Mode} {Growth} {Model} for the {Solid} {Electrolyte} {Interface} ({SEI})},
+	volume = {166},
+	doi = {10.1149/2.1101902jes},
+	abstract = {A mixed mode solid electrolyte interphase (SEI) growth model is presented that includes both the influence of the kinetics of the solvent reduction reaction at the SEI/electrode interface and diffusion of the solvent through the SEI layer. The governing equations are solved numerically to predict the solvent concentration profile, the SEI layer thickness, and the capacity loss. Capacity loss predictions are fitted to two sets of experimental data from the literature. The high quality of the fits demonstrates that the mixed mode model provides a useful description of the capacity loss in the cell due to the growth of the SEI layer on the anode under constant voltage storage condition. Also, analytical expressions are presented for SEI growth for both the combined kinetics/diffusion mode (mixed mode model) and the limit of a fast solvent reduction reaction (diffusion limited mode model) as a function of cell characteristics.},
+	journal = {Journal of The Electrochemical Society},
+	author = {Kamyab, Niloofar and Weidner, John and White, Ralph},
+	month = jan,
+	year = {2019},
+	pages = {A334--A341},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/4DY3B9RT/Kamyab et al. - 2019 - Mixed Mode Growth Model for the Solid Electrolyte Interface (SEI).pdf:application/pdf},
+}
+
+@article{kuzhiyil_lithium-ion_2025,
+	title = {Lithium-ion battery degradation modelling using universal differential equations: {Development} of a cost-effective parameterisation methodology},
+	volume = {382},
+	issn = {0306-2619},
+	shorttitle = {Lithium-ion battery degradation modelling using universal differential equations},
+	url = {https://www.sciencedirect.com/science/article/pii/S0306261924026059},
+	doi = {10.1016/j.apenergy.2024.125221},
+	abstract = {The accuracy and reliability of physics-based lithium-ion battery degradation models are limited by incomplete understanding of degradation mechanisms. This article presents Universal Differential Equations (UDE) based degradation modelling, which integrates neural networks into physics-based model differential equations to learn partially understood degradation mechanisms. Therefore, this approach combines the function approximation capabilities of machine learning with the interpretability of physics-based models. However, the widespread adoption of this methodology is hindered by the high cost of training neural networks placed within a physics-based degradation model. To address this, we propose a cost-effective parameterisation method that exploits the large difference between electrochemical and degradation time scales, to speed up the gradient calculation using the continuous adjoint sensitivity analysis. Additionally, efficient scaling of this method to multiple ageing datasets is ensured through mini-batching. Finally, we demonstrate this approach by developing a novel UDE calendar ageing model and validating it against in-house experimental data covering 39 storage conditions (13 states of charge at 0 °C, 25 °C, and 45 °C). The predictions on full cell capacity and loss of active material (LAM) at negative electrode align well with experimental observations with an average RMSE of 0.66\% and 1.11\% respectively, which was a significant improvement over the baseline physics-based model.},
+	urldate = {2025-11-25},
+	journal = {Applied Energy},
+	author = {Kuzhiyil, Jishnu Ayyangatu and Damoulas, Theodoros and Planella, Ferran Brosa and Widanage, W. Dhammika},
+	month = mar,
+	year = {2025},
+	keywords = {Battery degradation modelling, Calendar ageing, Scientific machine learning, Universal differential equations},
+	pages = {125221},
+	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/2NUXPFEC/Kuzhiyil et al. - 2025 - Lithium-ion battery degradation modelling using universal differential equations Development of a c.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/4M3SCIGQ/S0306261924026059.html:text/html},
+}
+
+@article{liu_insight_2021,
+	title = {Insight into the {Critical} {Role} of {Exchange} {Current} {Density} on {Electrodeposition} {Behavior} of {Lithium} {Metal}},
+	volume = {8},
+	copyright = {© 2021 The Authors. Published by Wiley-VCH GmbH},
+	issn = {2198-3844},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/advs.202003301},
+	doi = {10.1002/advs.202003301},
+	abstract = {Due to an ultrahigh theoretical specific capacity of 3860 mAh g−1, lithium (Li) is regarded as the ultimate anode for high-energy-density batteries. However, the practical application of Li metal anode is hindered by safety concerns and low Coulombic efficiency both of which are resulted fromunavoidable dendrite growth during electrodeposition. This study focuses on a critical parameter for electrodeposition, the exchange current density, which has attracted only little attention in research on Li metal batteries. A phase-field model is presented to show the effect of exchange current density on electrodeposition behavior of Li. The results show that a uniform distribution of cathodic current density, hence uniform electrodeposition, on electrode is obtained with lower exchange current density. Furthermore, it is demonstrated that lower exchange current density contributes to form a larger critical radius of nucleation in the initial electrocrystallization that results in a dense deposition of Li, which is a foundation for improved Coulombic efficiency and dendrite-free morphology. The findings not only pave the way to practical rechargeable Li metal batteries but can also be translated to the design of stable metal anodes, e.g., for sodium (Na), magnesium (Mg), and zinc (Zn) batteries.},
+	language = {en},
+	number = {5},
+	urldate = {2025-11-25},
+	journal = {Advanced Science},
+	author = {Liu, Yangyang and Xu, Xieyu and Sadd, Matthew and Kapitanova, Olesya O. and Krivchenko, Victor A. and Ban, Jun and Wang, Jialin and Jiao, Xingxing and Song, Zhongxiao and Song, Jiangxuan and Xiong, Shizhao and Matic, Aleksandar},
+	year = {2021},
+	note = {\_eprint: https://advanced.onlinelibrary.wiley.com/doi/pdf/10.1002/advs.202003301},
+	keywords = {electrochemical kinetics, electrodeposition, exchange current density, Li metal, phase-field model},
+	pages = {2003301},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/SMZAB8RM/Liu et al. - 2021 - Insight into the Critical Role of Exchange Current Density on Electrodeposition Behavior of Lithium.pdf:application/pdf},
+}
+
+@misc{noauthor_doyle-fuller-newman_nodate,
+	title = {Doyle-{Fuller}-{Newman} {Model} ({DFN}) — {PyBaMM} v25.10.1 {Manual}},
+	url = {https://docs.pybamm.org/en/stable/source/examples/notebooks/models/DFN.html},
+	language = {en},
+	urldate = {2025-11-25},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/SXUUMYN7/DFN.html:text/html},
+}
+
+@article{guo_review_2022,
+	title = {Review of “grey box” lifetime modeling for lithium-ion battery: {Combining} physics and data-driven methods},
+	volume = {56},
+	issn = {2352-152X},
+	shorttitle = {Review of “grey box” lifetime modeling for lithium-ion battery},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352152X22019806},
+	doi = {10.1016/j.est.2022.105992},
+	abstract = {Lithium-ion batteries are a popular choice for a wide range of energy storage system applications. The current motivation to improve the robustness of lithium-ion battery applications has stimulated the need for in-depth research into aging effects and the establishment of lifetime prediction models. This paper reviews different combination approaches of physics-based models and data-driven models. The three basic physics-based battery lifetime models are introduced, and requirements and features are compared from an application perspective. Then, state-of-the-art approaches for integrating physics and data-driven methods are systematically reviewed. Flowcharts present each approach to offer the readers a clear understanding. Next, the publication trends are represented by line graphs, and pie charts, including data-driven assisted physical models and physics-guided data-driven, different physical model applications, and data-driven approaches. It is concluded that electrochemical models have great potential to describe complex aging behavior under various conditions. Moreover, machine learning is a promising tool to overcome mechanistic absence and highly nonlinear performance, occupying 78 \% of all data-driven methods. Physics-guided data-driven approach started to emerge as an innovative lifetime prediction method after 2020. The application advantages and limitations are compared according to the description of different methods. Furthermore, future perspectives are discussed, with opportunities and challenges. The Prospect of applying physics-guided machine learning looks forward to more inspiration.},
+	urldate = {2025-11-25},
+	journal = {Journal of Energy Storage},
+	author = {Guo, Wendi and Sun, Zhongchao and Vilsen, Søren Byg and Meng, Jinhao and Stroe, Daniel Ioan},
+	month = dec,
+	year = {2022},
+	keywords = {Lithium-ion batteries, Data-driven assisted physical models, Data-driven methods, Lifetime modeling, Physics-based models, Physics-guided data-driven},
+	pages = {105992},
+}
+
+@article{guo_review_2022-1,
+	title = {Review of “grey box” lifetime modeling for lithium-ion battery: {Combining} physics and data-driven methods},
+	volume = {56},
+	issn = {2352-152X},
+	shorttitle = {Review of “grey box” lifetime modeling for lithium-ion battery},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352152X22019806},
+	doi = {10.1016/j.est.2022.105992},
+	abstract = {Lithium-ion batteries are a popular choice for a wide range of energy storage system applications. The current motivation to improve the robustness of lithium-ion battery applications has stimulated the need for in-depth research into aging effects and the establishment of lifetime prediction models. This paper reviews different combination approaches of physics-based models and data-driven models. The three basic physics-based battery lifetime models are introduced, and requirements and features are compared from an application perspective. Then, state-of-the-art approaches for integrating physics and data-driven methods are systematically reviewed. Flowcharts present each approach to offer the readers a clear understanding. Next, the publication trends are represented by line graphs, and pie charts, including data-driven assisted physical models and physics-guided data-driven, different physical model applications, and data-driven approaches. It is concluded that electrochemical models have great potential to describe complex aging behavior under various conditions. Moreover, machine learning is a promising tool to overcome mechanistic absence and highly nonlinear performance, occupying 78 \% of all data-driven methods. Physics-guided data-driven approach started to emerge as an innovative lifetime prediction method after 2020. The application advantages and limitations are compared according to the description of different methods. Furthermore, future perspectives are discussed, with opportunities and challenges. The Prospect of applying physics-guided machine learning looks forward to more inspiration.},
+	urldate = {2025-11-25},
+	journal = {Journal of Energy Storage},
+	author = {Guo, Wendi and Sun, Zhongchao and Vilsen, Søren Byg and Meng, Jinhao and Stroe, Daniel Ioan},
+	month = dec,
+	year = {2022},
+	keywords = {Lithium-ion batteries, Data-driven assisted physical models, Data-driven methods, Lifetime modeling, Physics-based models, Physics-guided data-driven},
+	pages = {105992},
+	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/MTKMXS3Z/Guo et al. - 2022 - Review of “grey box” lifetime modeling for lithium-ion battery Combining physics and data-driven me.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/UY56BMWM/S2352152X22019806.html:text/html},
+}
+
+@article{xu_lstm-based_2024,
+	title = {{LSTM}-based estimation of lithium-ion battery {SOH} using data characteristics and spatio-temporal attention},
+	volume = {19},
+	issn = {1932-6203},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0312856},
+	doi = {10.1371/journal.pone.0312856},
+	abstract = {As the primary power source for electric vehicles, the accurate estimation of the State of Health (SOH) of lithium-ion batteries is crucial for ensuring the reliable operation of the power system. Long Short-Term Memory (LSTM), a special type of recurrent neural network, achieves sequence information estimation through a gating mechanism. However, traditional LSTM-based SOH estimation methods do not account for the fact that the degradation sequence of battery SOH exhibits trend-like nonlinearity and significant dynamic variations between samples. Therefore, this paper proposes an LSTM-based lithium-ion SOH estimation method incorporating data characteristics and spatio-temporal attention. First, considering the trend-like nonlinearity of the degradation sequence, which is initially gradual and then rapid, input features are filtered and divided into trend and non-trend features. Then, to address the significant dynamic variations between samples, especially for capacity regeneration,a spatio-temporal attention mechanism is designed to extract spatio-temporal features from multidimensional non-trend features. Subsequently, an LSTM model is built with trend features, spatio-temporal features, and actual capacity as inputs to estimate capacity. Finally, the model is trained and tested on different datasets. Experimental results demonstrate that the proposed method outperforms traditional methods in terms of SOH estimation accuracy and robustness.},
+	language = {en},
+	number = {12},
+	urldate = {2025-11-26},
+	journal = {PLOS ONE},
+	author = {Xu, Gengchen and Xu, Jingyun and Zhu, Yifan},
+	month = dec,
+	year = {2024},
+	note = {Publisher: Public Library of Science},
+	keywords = {Algorithms, Body weight, Electrochemistry, Lithium, Network analysis, Neural networks, Short term memory, Support vector machines},
+	pages = {e0312856},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/Y66YYA7Y/Xu et al. - 2024 - LSTM-based estimation of lithium-ion battery SOH using data characteristics and spatio-temporal atte.pdf:application/pdf},
+}
+
+@article{liu_analytical_2020,
+	title = {An analytical model for the {CC}-{CV} charge of {Li}-ion batteries with application to degradation analysis},
+	volume = {29},
+	issn = {2352-152X},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352152X20300517},
+	doi = {10.1016/j.est.2020.101342},
+	abstract = {While the constant current charge time (CCCT) and constant voltage charge time (CVCT) are increasingly used for the state of health (SOH) estimation of Li-ion batteries, their correlations with battery degradation are not investigated comprehensively. This paper develops an analytical model to quantify the chargeable capacity of a Li-ion battery under a CC-CV profile, in which CCCT and CVCT are identified as two uncoupled parameters. The model is verified using a battery dataset of cycling tests subjected to 19 different test conditions with different discharge currents, ambient temperatures, and rest times. The behaviors of CCCT and CVCT during battery degradation are studied in terms of chargeable capacity fade. A new health indicator, the CV-CC time ratio, is developed for degradation analysis. Two partial CC-CV cases are also considered in the studies: in one case, the partial CC-CV charge starts after different discharged depths, and in the other case, different fast charging policies are executed before the partial CC-CV charge.},
+	urldate = {2025-11-28},
+	journal = {Journal of Energy Storage},
+	author = {Liu, Haining and Naqvi, Ijaz Haider and Li, Fajia and Liu, Chengliang and Shafiei, Neda and Li, Yulong and Pecht, Michael},
+	month = jun,
+	year = {2020},
+	keywords = {State of health, Lithium-ion battery, Constant current charge time, Constant voltage charge time},
+	pages = {101342},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/MI4F4KYY/S2352152X20300517.html:text/html},
+}
+
+@misc{noauthor_bayesian_nodate,
+	title = {Bayesian {Optimization} {Algorithm} - {MATLAB} \& {Simulink}},
+	url = {https://uk.mathworks.com/help/stats/bayesian-optimization-algorithm.html},
+	abstract = {Understand the underlying algorithms for Bayesian optimization.},
+	language = {en},
+	urldate = {2025-11-29},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/2UCY7FZB/bayesian-optimization-algorithm.html:text/html},
+}
+
+@article{liaw_modeling_nodate,
+	title = {Modeling of {Battery} {Life}  {I}. {The} {Equivalent} {Circuit} {Model} ({ECM}) {Approach}},
+	language = {en},
+	author = {Liaw, Bor Yann and Jungst, Rudolph G and Urbina, Angel and Paez, Thomas L},
+	file = {PDF:/Users/georgekirby/Zotero/storage/2ZZ5DJF4/Liaw et al. - Modeling of Battery Life  I. The Equivalent Circuit Model (ECM) Approach.pdf:application/pdf},
+}
+
+@article{farmann_study_2017,
+	title = {A study on the dependency of the open-circuit voltage on temperature and actual aging state of lithium-ion batteries},
+	volume = {347},
+	issn = {0378-7753},
+	url = {https://www.sciencedirect.com/science/article/pii/S0378775317301088},
+	doi = {10.1016/j.jpowsour.2017.01.098},
+	abstract = {The knowledge of nonlinear monotonic correlation between State-of-Charge (SoC) and open-circuit voltage (OCV) is necessary for an accurate battery state estimation in battery management systems. Among the main factors influencing the OCV behavior of lithium-ion batteries (LIBs) are aging, temperature and previous history of the battery. In order to develop an accurate OCV-based SoC estimator, it is necessary that the OCV behavior of the LIBs is sufficiently investigated and understood. In this study, the impact of the mentioned factors on OCV of LIBs at different aging states using various active materials (C/NMC, C/LFP, LTO/NMC) is investigated over a wide temperature range (from −20 °C to +45 °C) comprehensively. It is shown that temperature and aging of the battery influence the battery's relaxation behavior significantly where a linear dependence between the required relaxation time and the temperature can be assumed. Moreover, the required relaxation time increases with decreasing SoC and temperature. Furthermore, we state that for individual LIB, the OCV and the OCV hysteresis change over the battery lifetime. Based on the obtained results a simplified OCV model considering temperature correction term and aging of the battery is proposed.},
+	urldate = {2025-11-29},
+	journal = {Journal of Power Sources},
+	author = {Farmann, Alexander and Sauer, Dirk Uwe},
+	month = apr,
+	year = {2017},
+	keywords = {Lithium-ion batteries, Lithium, Experimental investigation, Open-circuit voltage, Open-circuit voltage model, Relaxation process},
+	pages = {1--13},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/XTLSZPU3/S0378775317301088.html:text/html},
+}
+
+@misc{noauthor_choosing_nodate,
+	title = {Choosing an appropriate model · {JuliaSimBatteries}},
+	url = {https://help.juliahub.com/batteries/stable/model_options/},
+	urldate = {2025-11-30},
+	file = {Choosing an appropriate model · JuliaSimBatteries:/Users/georgekirby/Zotero/storage/5DTYVJ2K/model_options.html:text/html},
+}
+
+@misc{noauthor_doyle_2025,
+	title = {Doyle {Fuller} {Newman} {Battery} {Model}},
+	url = {https://www.batterydesign.net/modelling/doyle-fuller-newman-battery-model/},
+	abstract = {The Doyle Fuller Newman Battery Model, often abbreviated as the Newman mode, is the starting point for a lot of battery electrochemical models.},
+	language = {en-US},
+	urldate = {2025-11-30},
+	journal = {Battery Design},
+	month = nov,
+	year = {2025},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/MCYVT2PR/doyle-fuller-newman-battery-model.html:text/html},
+}
+
+@book{sulzer_python_2020,
+	title = {Python {Battery} {Mathematical} {Modelling} ({PyBaMM})},
+	abstract = {As the UK battery modelling community grows, there is a clear need for software that uses modern software engineering techniques to facilitate cross-institutional collaboration and democratise research progress. The Python package PyBaMM aims to provide a flexible platform for implementation and comparison of new models and numerical methods. This is achieved by implementing models as expression trees and processing them in a modular fashion through a pipeline. Comprehensive testing provides robustness to changes and hence eases the implementation of model extensions. PyBaMM is open source and available on GitHub at https://github.com/pybamm-team/PyBaMM.},
+	author = {Sulzer, Valentin and Marquis, Scott and Timms, Robert and Robinson, Martin and Chapman, S.},
+	month = feb,
+	year = {2020},
+	doi = {10.1149/osf.io/67ckj},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/PQQCY3ES/Sulzer et al. - 2020 - Python Battery Mathematical Modelling (PyBaMM).pdf:application/pdf},
+}
+
+@article{auch_influence_2023,
+	title = {Influence of {Lithium}-{Ion}-{Battery} {Equivalent} {Circuit} {Model} {Parameter} {Dependencies} and {Architectures} on the {Predicted} {Heat} {Generation} in {Real}-{Life} {Drive} {Cycles}},
+	volume = {9},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2313-0105},
+	url = {https://www.mdpi.com/2313-0105/9/5/274},
+	doi = {10.3390/batteries9050274},
+	abstract = {This study investigates the influence of the considered Electric Equivalent Circuit Model (ECM) parameter dependencies and architectures on the predicted heat generation rate by using the Bernardi equation. For this purpose, the whole workflow, from the cell characterization tests to the cell parameter identification and finally validation studies, is examined on a cylindrical 5 Ah LG217000 Lithium-Ion-Battery (LIB) with a nickel manganese cobalt chemistry. Additionally, different test procedures are compared with respect to their result quality. For the parameter identification, a Matlab tool is developed enabling the user to generate all necessary ECMs in one run. The accuracy of the developed ECMs is evaluated by comparing voltage prediction of the experimental and simulation results for the highly dynamic World harmonized Light vehicle Test Cycle (WLTC) at different states of charges (SOCs) and ambient temperatures. The results show that parameter dependencies such as hysteresis and current are neglectable, if only the voltage results are compared. Considering the heat generation prediction, however, the neglection can result in mispredictions of up to 9\% (current) or 22\% (hysteresis) and hence should not be neglected. Concluding the voltage and heat generation results, this study recommends using a Dual Polarization (DP) or Thevenin ECM considering all parameter dependencies except for the charge/discharge current dependency for thermal modeling of LIBs.},
+	language = {en},
+	number = {5},
+	urldate = {2025-12-01},
+	journal = {Batteries},
+	author = {Auch, Marcus and Kuthada, Timo and Giese, Sascha and Wagner, Andreas},
+	month = may,
+	year = {2023},
+	note = {Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {Bernardi equation, computational fluid dynamics, cylindrical cell, equivalent circuit model, heat generation, lithium-ion-battery},
+	pages = {274},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/DI3LM8U8/Auch et al. - 2023 - Influence of Lithium-Ion-Battery Equivalent Circuit Model Parameter Dependencies and Architectures o.pdf:application/pdf},
+}
+
+@misc{noauthor_iclocs2_nodate,
+	title = {{ICLOCS2}: {A} {MATLAB} {Toolbox} for {Optimization} {Based} {Control}},
+	url = {http://www.ee.ic.ac.uk/ICLOCS/default.htm},
+	urldate = {2025-12-01},
+	file = {ICLOCS2\: A MATLAB Toolbox for Optimization Based Control:/Users/georgekirby/Zotero/storage/2RRBH7LL/default.html:text/html},
+}
+
+@article{edge_lithium_2021,
+	title = {Lithium ion battery degradation: what you need to know},
+	volume = {23},
+	issn = {1463-9084},
+	shorttitle = {Lithium ion battery degradation},
+	url = {https://pubs.rsc.org/en/content/articlelanding/2021/cp/d1cp00359c},
+	doi = {10.1039/D1CP00359C},
+	abstract = {The expansion of lithium-ion batteries from consumer electronics to larger-scale transport and energy storage applications has made understanding the many mechanisms responsible for battery degradation increasingly important. The literature in this complex topic has grown considerably; this perspective aims to distil current knowledge into a succinct form, as a reference and a guide to understanding battery degradation. Unlike other reviews, this work emphasises the coupling between the different mechanisms and the different physical and chemical approaches used to trigger, identify and monitor various mechanisms, as well as the various computational models that attempt to simulate these interactions. Degradation is separated into three levels: the actual mechanisms themselves, the observable consequences at cell level called modes and the operational effects such as capacity or power fade. Five principal and thirteen secondary mechanisms were found that are generally considered to be the cause of degradation during normal operation, which all give rise to five observable modes. A flowchart illustrates the different feedback loops that couple the various forms of degradation, whilst a table is presented to highlight the experimental conditions that are most likely to trigger specific degradation mechanisms. Together, they provide a powerful guide to designing experiments or models for investigating battery degradation.},
+	language = {en},
+	number = {14},
+	urldate = {2025-12-01},
+	journal = {Physical Chemistry Chemical Physics},
+	author = {Edge, Jacqueline S. and O’Kane, Simon and Prosser, Ryan and Kirkaldy, Niall D. and Patel, Anisha N. and Hales, Alastair and Ghosh, Abir and Ai, Weilong and Chen, Jingyi and Yang, Jiang and Li, Shen and Pang, Mei-Chin and Diaz, Laura Bravo and Tomaszewska, Anna and Marzook, M. Waseem and Radhakrishnan, Karthik N. and Wang, Huizhi and Patel, Yatish and Wu, Billy and Offer, Gregory J.},
+	month = apr,
+	year = {2021},
+	note = {Publisher: The Royal Society of Chemistry},
+	pages = {8200--8221},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/XDLQB8HF/Edge et al. - 2021 - Lithium ion battery degradation what you need to know.pdf:application/pdf},
+}
+
+@article{mohamed_advancements_2025,
+	title = {Advancements in parameter estimation techniques for {1RC} and {2RC} equivalent circuit models of lithium-ion batteries: {A} comprehensive review},
+	volume = {113},
+	issn = {2352-152X},
+	shorttitle = {Advancements in parameter estimation techniques for {1RC} and {2RC} equivalent circuit models of lithium-ion batteries},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352152X25002944},
+	doi = {10.1016/j.est.2025.115581},
+	abstract = {The growing reliance on batteries across diverse applications highlights their essential role in everyday life. In an increasingly electrical world, it is crucial that Lithium-ion Batteries (LIBs), known for their high energy density and extended cycle life, can be understood and utilised for optimal performance. Having a Battery Management System (BMS) that can provide accurate state determination is therefore essential. Among the various models discussed in the literature, the focus often narrows down to 1RC and 2RC Electric Equivalent Circuit Models (EECMs), due to their widespread use and capability to accurately represent the nonlinear behaviour of batteries. This provides a balance between high estimation accuracy and manageable computational complexity, making them suitable for real-time applications, while aligning with the practical requirements of online battery management systems. With three to six parameters to estimate, the accuracy of these parameters directly impacts the estimation accuracy of the battery states. Therefore, this paper provides a comprehensive review of advanced techniques for parameter estimation in 1RC and 2RC circuits of LIBs. The parameter estimation methods are grouped into broad categories: analytical, Kalman Filter-based (KF), optimization algorithms, Least Square (LS), Recursive Least Square (RLS), and hybrid methods. No single method is ideal for all cases, but rather it depends on the balance between complexity and accuracy required to best fit the situation. Discussion of the strengths, limitations, and practical applications of each method aims to guide researchers and engineers in battery management, enhance their understanding of these methodologies and assist them in selecting the optimal parameter estimation method for each application of LIB models.},
+	urldate = {2025-12-02},
+	journal = {Journal of Energy Storage},
+	author = {Mohamed, Mohamed A. A. and Yu, Tung Fai and Ramsden, Grace and Marco, James and Grandjean, Thomas},
+	month = mar,
+	year = {2025},
+	keywords = {Equivalent circuit model, First-order RC, Lithium-ion battery, Parameter estimation, Second-order RC},
+	pages = {115581},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/ZLXJNZFB/S2352152X25002944.html:text/html},
 }
